# askbend

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: audit.toml
.github/actions/check/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yaml  release.yaml
app/: Cargo.toml
app/src/: lib.rs
app/src/api/: http.rs  mod.rs  qa.rs  qa_query.rs  query.rs  status.rs
app/src/base/: mod.rs  string.rs
app/src/configs/: config.rs  github.rs  log.rs  mod.rs  qa.rs
app/src/dal/: db.rs  mod.rs  qa.rs
app/src/files/: file.rs  markdown.rs  mod.rs  parse.rs  rust.rs
app/src/github/: github_comment.rs  mod.rs
app/src/llm/: llm.rs  mod.rs  qa.rs
app/src/qa/: mod.rs  qa_db.rs  qa_embedding.rs  qa_llm.rs
app/tests/it/: main.rs
app/tests/it/base/: mod.rs  string.rs
app/tests/it/files/: file.rs  markdown.rs  mod.rs  rust.rs
app/tests/testdata/: 1.md  rust.rs
conf/: askbend.toml
schema/: table.sql
scripts/ci/: ci-run-unit-tests.sh
scripts/setup/: dev_setup.sh
web/: .env  .env.production  .eslintrc.cjs  fetch-repo-info.js  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
web/src/: App.tsx  index.less  index.scss  main.tsx
web/src/api/: index.ts
web/src/assets/constant/: index.ts
web/src/assets/css/: mixin.scss
web/src/assets/json/: preview-question.json  repo-info.json
web/src/assets/svg/: check.tsx  databend.tsx  github.tsx  link.tsx  right.tsx  send.tsx  time.tsx
web/src/components/Banner/: banner.tsx  styles.module.less  styles.module.scss
web/src/components/Card/: index.tsx
web/src/components/Entry/: index.tsx  styles.module.less
web/src/components/Error/: index.tsx  styles.module.less  styles.module.scss
web/src/components/Foot/: index.tsx
web/src/components/Footer/: styles.module.scss
web/src/components/Input/: count-length.tsx  examples.tsx  index.tsx  styles.module.less  styles.module.scss
web/src/components/Introduction/: index.tsx  styles.module.scss
web/src/components/Loading/: index.tsx  styles.module.scss
web/src/components/Markdown/: index.tsx  styles.module.scss
web/src/components/ProcuctName/: index.tsx  (+2 more)
web/src/hooks/: useGetScrollInfo.tsx
web/src/state/: accountInfoState.tsx
web/src/types/: index.ts
web/src/utils/: device-type.ts  tools.ts
(+21 files in other folders)
