[package]
name = "askbend"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "askbend"
path = "bin/ask.rs"
doctest = false
test = false

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
clap = { version = "4.1.7", features = ["derive", "env"] }
chrono = "0.4.24"
databend-driver = "0.2.23"
log = "0.4.0"
env_logger = "0.9.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serfig = "0.0.3"
anyhow = "^1.0.70"
octocrab = "0.25.1"
proc-macro2 = "1.0"
quote = "1.0"
markdown = "0.3.0"
syn = "1.0"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1.12"
url = "2.4.0"
walkdir = "2.3.3"

llmchain = { git = "https://github.com/shafishlabs/llmchain.rs", rev = "8e04987f3264508a9ddd4f921356a8f60a12aff5"}

[dev-dependencies]


