[package]
name = "askbend"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "askbend"
path = "bin/ask.rs"
doctest = false
test = false

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
anyhow = "^1.0.70"
chrono = "0.4.24"
clap = { version = "4.1.7", features = ["derive", "env"] }
databend-driver = "0.2.23"
env_logger = "0.10.0"
llmchain = "0.1.2"
log = "0.4.0"
markdown = "0.3.0"
octocrab = { version = "0.25.1", features = ["timeout", "retry"] }
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serfig = "0.1.0"
syn = "2.0.23"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1.12"
url = "2.4.0"
walkdir = "2.3.3"

[dev-dependencies]


