[package]
name = "askbend"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "askbend"
path = "bin/ask.rs"
doctest = false
test = false

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
anyhow = "^1.0.70"
chrono = "0.4.24"
clap = { version = "4.1.7", features = ["derive", "env"] }
databend-driver = "0.6.4"
env_logger = "0.10.0"
llmchain = "0.1.3"
log = "0.4.0"
octocrab = { version = "0.30.1", features = ["timeout", "retry"] }
serde = { version = "1.0.159", features = ["derive"] }
serfig = "0.1.0"
tokio = { version = "1.28", features = ["full"] }
url = "2.4.0"

[dev-dependencies]
